# hextra-patterns

./: .copier-answers.hexdoc-hexcasting.yml  .gitignore  build.gradle  gradle.properties  pyproject.toml
.github/workflows/: build_docs.yml
doc/: README.md  hexdoc.toml
doc/resources/assets/hextra_patterns/lang/: en_us.flatten.json5
doc/resources/assets/hextrapats/lang/: en_us.flatten.json5  zh_cn.flatten.json5
doc/src/hexdoc_hextra_patterns/: _hooks.py
doc/src/hexdoc_hextrapats/: __version__.py  _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/1.0.0/: index.html
docs/v/1.0.0/1.0/en_us/: .sitemap-marker.json  index.html
docs/v/1.0.0/1.0/en_us/basics/: index.html
docs/v/1.0.0/1.0/en_us/casting/: index.html
docs/v/1.0.0/1.0/en_us/greatwork/: index.html
docs/v/1.0.0/1.0/en_us/interop/: index.html
docs/v/1.0.0/1.0/en_us/items/: index.html
docs/v/1.0.0/1.0/en_us/lore/: index.html
docs/v/1.0.0/1.0/en_us/patterns/: index.html
docs/v/1.0.1/1.0.1/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.0.1/1.0.1/en_us/basics/: index.html
docs/v/1.0.1/1.0.1/en_us/casting/: index.html
docs/v/1.0.1/1.0.1/en_us/greatwork/: index.html
docs/v/1.0.1/1.0.1/en_us/interop/: index.html
docs/v/1.0.1/1.0.1/en_us/items/: index.html
docs/v/1.0.1/1.0.1/en_us/lore/: index.html
docs/v/1.0.1/1.0.1/en_us/patterns/: index.html
docs/v/1.0.1/en_us/: index.html
docs/v/1.0.2/1.0.2/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.0.2/1.0.2/en_us/basics/: index.html
docs/v/1.0.2/1.0.2/en_us/casting/: index.html
docs/v/1.0.2/1.0.2/en_us/greatwork/: index.html
docs/v/1.0.2/en_us/: index.html
docs/v/1.0.3/1.0.3/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.0.3/en_us/: index.html
docs/v/1.1.0/1.1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.1.0/en_us/: index.html
docs/v/1.1.1/: index.html
docs/v/1.1.1/1.1.1/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.1.2/1.1.2/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.1.2/1.1.2/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/1.1.2/en_us/: index.html
docs/v/1.1.2/zh_cn/: index.html
docs/v/1.2.0/: index.html
docs/v/1.2.0/1.0.0/en_us/: .sitemap-marker.json  index.html
docs/v/1.2.0/1.0.0/zh_cn/: .sitemap-marker.json  index.html
docs/v/1.2.0/zh_cn/: index.html
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/zh_cn/: .sitemap-marker.json  index.html  index.js
src/client/java/meepoffaith/hextra/: HextraPatternsClient.java
src/client/resources/: hextra-patterns.client.mixins.json  hextrapats.client.mixins.json
src/main/java/meepoffaith/hextra/: HextraPatterns.java
src/main/resources/: fabric.mod.json  hextra-patterns.mixins.json  hextrapats.mixins.json
(+750 files in other folders)
